frontend/src/components/sidebar/SidebarListEntry.scss
@use '../../styles/mixins';

.entryRow {
  border-radius: 0 15px 15px 0;
  padding: 18px 0 18px 32px;
  align-items: center;
  display: flex;
  text-decoration: none;
  cursor: pointer;

  @include mixins.tablet-and-down() {
    border-radius: 15px 15px 0 0;
    padding: 10px 0 12px 0;
    width: 104px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  @include mixins.phone() {
    width: 68px;
  }
}
.entryRow:hover {
  img {
    filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(300%) contrast(100%);
  }

  label {
    color: var(--sidebar-title);
  }
}
.entryRow.active {
  border-left: 4px solid var(--sidebar-entry-icon-selected);
  background-color: var(--sidebar-entry-selected-background);

  img {
    filter: invert(49%) sepia(22%) saturate(1093%) hue-rotate(126deg) brightness(95%) contrast(88%);
  }

  label {
    color: var(--sidebar-entry-text-selected);
  }

  @include mixins.tablet-and-down() {
    border-left: 0;
    border-bottom: 5px solid var(--sidebar-entry-icon-selected);
    background-color: var(--sidebar-entry-selected-background);
  }
}

.entryRowImg {
  width: 20px;

  @include mixins.tablet-and-down() {
    height: 24px;
    width: auto;
  }
}

.entryRowImgWrapper {
  height: 25px;
  display: flex;
  flex-direction: row;
  align-items: center;

  @include mixins.tablet-and-down() {
    height: 24px;
  }
}

.entryRowLabel {
  margin-left: 16px;
  font-weight: 600;
  color: var(--sidebar-entry-text-default);
  cursor: pointer;
  white-space: nowrap;
  opacity: 1;
  transition: opacity 0.4s ease-in;

  @include mixins.tablet-and-down(50) {
    transition: width 0s ease;
  }

  @include mixins.tablet-and-down() {
    margin-top: 8px;
    margin-left: 0;
    font-size: 12px;
    transition: opacity 0s ease-in;
  }

  @include mixins.phone() {
    display: none;
  }
}
.entryRowLabel.minimized {
  opacity: 0;
  transition: opacity 0.2s ease-out;

  @include mixins.tablet-and-down(50) {
    transition: width 0s ease;
  }

  @include mixins.tablet-and-down() {
    opacity: 1;
    transition: opacity 0s ease-out;
  }
}

